--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,18 +8,113 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="1280dp"
-        android:layout_height="720dp"
+        android:layout_width="740dp"
+        android:layout_height="411dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/fondo" />
 
-    <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="259dp"
-        android:layout_height="154dp"
-        app:srcCompat="@drawable/azul"
-        tools:layout_editor_absoluteX="418dp"
-        tools:layout_editor_absoluteY="191dp" />
+    <ImageView
+        android:id="@+id/blueBtn"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginStart="509dp"
+        android:layout_marginTop="63dp"
+        android:layout_marginEnd="81dp"
+        android:layout_marginBottom="198dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="@+id/imageView"
+        app:srcCompat="@drawable/azul" />
+
+    <ImageView
+        android:id="@+id/pinkBtn"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginStart="452dp"
+        android:layout_marginTop="213dp"
+        android:layout_marginEnd="138dp"
+        android:layout_marginBottom="48dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="@+id/imageView"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/rosa" />
+
+    <ImageView
+        android:id="@+id/upBtn"
+        android:layout_width="100dp"
+        android:layout_height="125dp"
+        android:layout_marginStart="144dp"
+        android:layout_marginTop="105dp"
+        android:layout_marginEnd="496dp"
+        android:layout_marginBottom="180dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toStartOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="@+id/imageView"
+        app:srcCompat="@drawable/arriba" />
+
+    <ImageView
+        android:id="@+id/test"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="344dp"
+        android:layout_marginTop="96dp"
+        android:layout_marginEnd="346dp"
+        android:layout_marginBottom="265dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toStartOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="@+id/imageView"
+        app:srcCompat="@drawable/verde" />
+
+    <ImageView
+        android:id="@+id/rightBtn"
+        android:layout_width="125dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="199dp"
+        android:layout_marginTop="184dp"
+        android:layout_marginEnd="416dp"
+        android:layout_marginBottom="127dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toStartOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="@+id/imageView"
+        app:srcCompat="@drawable/derecha" />
+
+    <ImageView
+        android:id="@+id/leftBtn"
+        android:layout_width="125dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="65dp"
+        android:layout_marginTop="184dp"
+        android:layout_marginEnd="550dp"
+        android:layout_marginBottom="127dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toStartOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="@+id/imageView"
+        app:srcCompat="@drawable/izquierda" />
+
+    <ImageView
+        android:id="@+id/downBtn"
+        android:layout_width="100dp"
+        android:layout_height="125dp"
+        android:layout_marginStart="144dp"
+        android:layout_marginTop="238dp"
+        android:layout_marginEnd="496dp"
+        android:layout_marginBottom="48dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toStartOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="@+id/imageView"
+        app:srcCompat="@drawable/abajo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
